tests/should_fail/let_destructure_cons_on_string.nv
module test
// let cons destructure on non-list type (string)
let [h, ..t] = "hello"
